[project]
name = "mem"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioconsole>=0.8.2",
    "dspy>=3.0.3",
    "llama-cpp-python>=0.3.16",
    "mem0ai>=0.1.118",
    "openai>=1.109.1",
    "qdrant-client>=1.15.1",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "redis>=4.5.0",
    "numpy>=1.24.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[tool.setuptools]
packages = ["mem"]
